9.2/python/_sources/geosoft.gxapi.classes.rst.txt
.. _geosoft.gxapi.classes:

GX API Class/Library Reference
==============================

These are the low-level library classes and functions that make up the GX API.

.. toctree::
   :maxdepth: 1

   geosoft.gxapi
   GXGEOSOFT
   GX3DN
   GX3DV
   GXACQUIRE
   GXAGG
   GXARCDB
   GXARCDH
   GXARCMAP
   GXARCSYS
   GXBF
   GXBIGRID
   GXCHIMERA
   GXCOM
   GXCSYMB
   GXDAT
   GXDATALINKD
   GXDATAMINE
   GXDB
   GXDBREAD
   GXDBWRITE
   GXDGW
   GXDH
   GXDMPPLY
   GXDOCU
   GXDSEL
   GXDU
   GXDXFI
   GXEDB
   GXEDOC
   GXEMAP
   GXEMAPTEMPLATE
   GXEUL3
   GXEXP
   GXEXT
   GXFFT
   GXFFT2
   GXFLT
   GXGD
   GXGEOSTRING
   GXGER
   GXGIS
   GXGMSYS
   GXGU
   GXGUI
   GXHGD
   GXHTTP
   GXHXYZ
   GXIEXP
   GXIGRF
   GXIMG
   GXIMU
   GXINTERNET
   GXIP
   GXIPGUI
   GXIPJ
   GXITR
   GXKGRD
   GXLAYOUT
   GXLL2
   GXLMSG
   GXLPT
   GXLST
   GXLTB
   GXMAP
   GXMAPL
   GXMAPTEMPLATE
   GXMATH
   GXMETA
   GXMISC
   GXMSTK
   GXMVG
   GXMVIEW
   GXMVU
   GXMXD
   GXPAT
   GXPDF3D
   GXPG
   GXPGEXP
   GXPGU
   GXPJ
   GXPLY
   GXPRAGA3
   GXPROJ
   GXRA
   GXREG
   GXRGRD
   GXSBF
   GXSEMPLOT
   GXSHP
   GXSQLSRV
   GXST
   GXST2
   GXSTK
   GXSTR
   GXSTRINGS
   GXSURFACE
   GXSURFACEITEM
   GXSYS
   GXTB
   GXTC
   GXTEST
   GXTIN
   GXTPAT
   GXTR
   GXTRND
   GXUNC
   GXUSERMETA
   GXVA
   GXVAU
   GXVM
   GXVOX
   GXVOXD
   GXVOXE
   GXVULCAN
   GXVV
   GXVVEXP
   GXVVU
   GXWA
